--- a/build.gradle
+++ b/build.gradle
@@ -195,7 +195,8 @@ dependencies {
     clientOnly fg.deobf("curse.maven:appleskin-248787:4770828")
     clientOnly fg.deobf("curse.maven:controlling-250398:4646682")
     clientOnly fg.deobf("curse.maven:neat-238372:4580940") // neat
-    clientOnly fg.deobf("curse.maven:forge-client-reset-packet-forward-862147:4808617")
+    //clientOnly fg.deobf("curse.maven:forge-client-reset-packet-forward-862147:4808617")
+    clientOnly fg.deobf("curse.maven:server-redirect-295232:4683939")
     clientDistOnly fg.deobf("curse.maven:mouse-tweaks-60089:4581240")
     clientDistOnly fg.deobf("curse.maven:sound-physics-remastered-535489:5525256")
 
